# autonomous-driving

./: .gitignore  Dockerfile  Dockerfile.laptop  Dockerfile.pi  cyclonedds_laptop.xml  cyclonedds_pi.xml  setup_laptop.sh  setup_pi.sh
ros2_ws_laptop/src/communication_interfaces/: CMakeLists.txt  package.xml
ros2_ws_laptop/src/data_scripts/: CMakeLists.txt  package.xml
ros2_ws_laptop/src/data_scripts/data_scripts/: Reference.mat  Trajectory_data_8.mat  debug_plotter.py  ekf_node.py  mpc_node.py  mpc_node_old.py  trajectory_plotter.py
ros2_ws_laptop/src/data_scripts/launch/: main.launch.py
ros2_ws_laptop/src/data_scripts/launch/install/: local_setup.sh  setup.sh
ros2_ws_laptop/src/data_scripts/launch/log/: latest_build
ros2_ws_laptop/src/script_msgs/: package.xml
ros2_ws_laptop/src/script_msgs/msg/: MotorCommandObj.msg
ros2_ws_pi/src/imu_node/: package.xml  setup.cfg  setup.py
ros2_ws_pi/src/imu_node/imu_node/: imu_publisher.py  imu_reader.py
ros2_ws_pi/src/io_scripts/: CMakeLists.txt  package.xml
ros2_ws_pi/src/io_scripts/launch/: main.launch.py
ros2_ws_pi/src/io_scripts/scripts/: imu_publisher.py  motor_controller.py
ros2_ws_pi/src/script_msgs/: CMakeLists.txt
