<?xml version="1.0"?>
<package format="3">
  <name>data_scripts</name>
  <version>0.0.1</version>
  <description>Splits custom UDP SensorDataObj into LaserScan and IMU topics.</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Build Dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Python -->
  <exec_depend>rclpy</exec_depend>

  <!-- ROS Messages -->
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <!-- Your custom message package -->
  <depend>communication_interfaces</depend>

  <!-- For python setup tools -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

